<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match.detail.MatchDetailActivity"
    >
    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_detail_match_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_detail_home_badge"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/home_badge"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_detail_home_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_home_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_detail_vs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/vs"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detail_away_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgv_detail_away_badge"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/tv_detail_away_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_goals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/goals"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_goals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_shots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/shots"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_shots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineups"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_goalkeeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/goalkeeper"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_goalkeeper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/defense"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_midfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/midfield"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_midfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/forward"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tv_detail_home_subtitutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/subtitutes"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tv_detail_away_subtitutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_weight="5"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>