<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.detail.PlayerDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgv_player_detail_fanart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player_detail_fanart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_player"
                        android:textAlignment="center"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_player_detail_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="40sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/height_player"
                        android:textAlignment="center"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_player_detail_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="40sp"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_player_detail_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/tv_player_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="10dp"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_player_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>



</ScrollView>